Prevented overflowing GitHub link footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,6 +117,15 @@ nav {
 }
 
 /* === GitHub Link */
+
+#screenContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  overflow: hidden;
+}
+
 #githubLink {
   position: absolute;
   text-align: center;
